--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,12 @@ services:
         image: binhex/arch-delugevpn:1.3.15_18_ge050905b2-1-04
         container_name: delugevpn
         restart: unless-stopped
-        networks:
-            - web
+        network_mode: "bridge"
         ports:
+            - '${IP_ADDRESS}:8112:8112'
             - '${IP_ADDRESS}:8118:8118'
             - '${IP_ADDRESS}:58846:58846'
             - '${IP_ADDRESS}:58946:58946'
-        expose:
-            - 8112
         cap_add:
             - NET_ADMIN
         environment:
@@ -51,16 +49,6 @@ services:
             - '${DLDIR}:/data'
             - './delugevpn/config:/config'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8112'
-            - 'traefik.frontend.rule=Host:deluge.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # JACKETT
@@ -69,10 +57,9 @@ services:
         image: linuxserver/jackett
         container_name: jackett
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 9117
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:9117:9117'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -80,16 +67,6 @@ services:
             - './jackett:/config'
             - '${DLDIR}/complete:/downloads'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=9117'
-            - 'traefik.frontend.rule=Host:jackett.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # LIDARR
@@ -98,73 +75,46 @@ services:
         image: linuxserver/lidarr
         container_name: lidarr
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 8686
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:8686:8686'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
-            - TZ=${TZ}
         volumes:
             - './lidarr:/config'
             - '${DLDIR}/complete/music:/data/completed'
             - '${MUSICDIR}:/music'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8686'
-            - 'traefik.frontend.rule=Host:lidarr.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # MUXIMUX
-    # Web Frontend for HTPC Management
     # ----------------------------------------
     muximux:
         image: linuxserver/muximux
         container_name: muximux
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 80
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:80:80'
         environment:
-            - TZ=${TZ}
             - PUID=${PUID}
             - PGID=${PGID}
         volumes:
             - './muximux:/config'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=80'
-            - 'traefik.frontend.rule=Host:manage.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # NETDATA
-    # System Resource Monitoring Service
     # ----------------------------------------
     netdata:
         image: netdata/netdata:latest
         container_name: netdata
         hostname: '${HOSTNAME}'
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 19999
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:19999:19999'
         cap_add:
             - SYS_PTRACE
         security_opt:
@@ -175,16 +125,6 @@ services:
             - '/proc:/host/proc:ro'
             - '/sys:/host/sys:ro'
             - '/var/run/docker.sock:/var/run/docker.sock:rw'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=19999'
-            - 'traefik.frontend.rule=Host:netdata.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # SABnzbd
@@ -193,11 +133,9 @@ services:
         image: binhex/arch-sabnzbdvpn
         container_name: sabnzbdvpn
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 8080
+        network_mode: 'bridge'
         ports:
+          - '${IP_ADDRESS}:8080:8080'
           - '${IP_ADDRESS}:8090:8090'
         cap_add:
           - NET_ADMIN
@@ -222,56 +160,32 @@ services:
             - '${DLDIR}:/data'
             - './sabnzbdvpn/config:/config'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8080'
-            - 'traefik.frontend.rule=Host:sabnzbd.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # OMBI
-    # Request Service for Plex Content
     # ----------------------------------------
     ombi:
         image: linuxserver/ombi
         container_name: ombi
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 3579
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:3579:3579'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
         volumes:
             - './ombi:/config'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=3579'
-            - 'traefik.frontend.rule=Host:request.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # OUROBOROS
-    # Automatic Update Service for Docker VMs
     # ----------------------------------------
     ouroboros:
         image: pyouroboros/ouroboros
         container_name: ouroboros
         restart: unless-stopped
-        networks:
-            - internal
+        network_mode: "bridge"
         hostname: '${HOSTNAME}'
         environment:
             - CLEANUP=true
@@ -281,8 +195,6 @@ services:
             - TZ=${TZ}
         volumes:
             - '/var/run/docker.sock:/var/run/docker.sock'
-        labels:
-            - 'traefik.enable=false'
 
     # ----------------------------------------
     # PLEX
@@ -291,8 +203,7 @@ services:
         container_name: plex
         image: plexinc/pms-docker:${PMSTAG}
         restart: unless-stopped
-        networks:
-            - web
+        network_mode: "host"
         ports:
             - '${IP_ADDRESS}:32400:32400/tcp'
             - '${IP_ADDRESS}:3005:3005/tcp'
@@ -317,25 +228,17 @@ services:
             - '${MOVIEDIR}:/data/movies'
             - '${MUSICDIR}:/data/music'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=32400'
-            - 'traefik.frontend.rule=Host:plex.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
 
     # ----------------------------------------
     # PORTAINER
-    # Docker Container Management
     # ----------------------------------------
     portainer:
         image: portainer/portainer:latest
         container_name: portainer
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 9000
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:9000:9000'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -344,29 +247,17 @@ services:
             - '/var/run/docker.sock:/var/run/docker.sock'
             - '/etc/localtime:/etc/localtime:ro'
         command: ${PORTAINERSTYLE} -H unix:///var/run/docker.sock
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=9000'
-            - 'traefik.frontend.rule=Host:portainer.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # RADARR
-    # Movie Management
     # ----------------------------------------
     radarr:
         image: linuxserver/radarr
         container_name: radarr
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 7878
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:7878:7878'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -375,16 +266,6 @@ services:
             - '${DLDIR}/complete/movies:/data/completed'
             - '${MOVIEDIR}:/movies'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=7878'
-            - 'traefik.frontend.rule=Host:radarr.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
     # ----------------------------------------
     # SONARR
@@ -393,10 +274,9 @@ services:
         image: linuxserver/sonarr
         container_name: sonarr
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 8989
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:8989:8989'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -406,16 +286,6 @@ services:
             - '${DLDIR}/complete/tvshows:/data/completed'
             - '${TVDIR}:/tv'
             - '/etc/localtime:/etc/localtime:ro'
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8989'
-            - 'traefik.frontend.rule=Host:sonarr.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
 
   # ----------------------------------------
   # LazyLibrarian
@@ -452,16 +322,14 @@ services:
 
     # ----------------------------------------
     # TAUTULLI
-    # Monitoring Service for PLEX Usage
     # ----------------------------------------
     tautulli:
         image: tautulli/tautulli
         container_name: tautulli
         restart: unless-stopped
-        networks:
-            - web
-        expose:
-            - 8181
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:8181:8181'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -471,74 +339,3 @@ services:
             - './plex/Library/Application Support/Plex Media Server/Logs:/logs:ro'
         depends_on:
             - plex
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8181'
-            - 'traefik.frontend.rule=Host:plexpy.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
-
-    # ----------------------------------------
-    # TRAEFIK
-    # Reverse Proxy + SSL Support
-    # ----------------------------------------
-    traefik:
-        image: traefik
-        container_name: traefik
-        restart: unless-stopped
-        networks:
-            - web
-        ports:
-            - '80:80'
-            - '443:443'
-        expose:
-            - 8080
-        environment:
-            - TZ=${TZ}
-            - PUID=${PUID}
-            - PGID=${PGID}
-        volumes:
-            - '/var/run/docker.sock:/var/run/docker.sock'
-            - './traefik:/etc/traefik/acme'
-        command:
-            - --docker
-            - --api
-            - --loglevel=debug
-            - "--entryPoints=Name:https Address::443 TLS"
-            - "--entryPoints=Name:http Address::80 Redirect.EntryPoint:https"
-            - --acme.entrypoint=https 
-            - --acme=true 
-            - --acme.domains=${DOMAIN}
-            - --acme.email=${EMAIL}
-            - --acme.ondemand=true 
-            - --acme.onhostrule
-            - --acme.httpchallenge
-            - --acme.httpchallenge.entrypoint=http
-            - --acme.storage=etc/traefik/acme/acme.json
-            - --docker.watch
-        networks:
-            - web
-        labels:
-            - 'traefik.enable=true'
-            - 'traefik.docker.network=${STACK_NAME}_web'
-            - 'traefik.port=8080'
-            - 'traefik.frontend.rule=Host:traefik.${DOMAIN}'
-            - 'traefik.frontend.entryPoints=https'
-            - 'traefik.frontend.auth.basic=${TRAEFIK_AUTH}'
-            - 'traefik.frontend.headers.forceSTSHeader=true'
-            - 'traefik.frontend.headers.STSSeconds=315360000'
-            - 'traefik.frontend.headers.STSIncludeSubdomains=true'
-            - 'traefik.frontend.headers.STSPreload=true'
-
-########################
-# GLOBAL CONFIGURATION #
-########################
-
-networks:
-    internal:
-    web:
-
