Updating download directory locations for sonarr/radarr/lidarr so bin can be specified. Updated instructions to run as mediabox user.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
             - PGID=${PGID}
         volumes:
             - './lidarr:/config'
-            - '${DLDIR}/complete/music:/data/completed'
+            - '${DLDIR}/complete:/data/completed'
             - '${MUSICDIR}:/music'
             - '/etc/localtime:/etc/localtime:ro'
 
@@ -263,7 +263,7 @@ services:
             - PGID=${PGID}
         volumes:
             - './radarr:/config'
-            - '${DLDIR}/complete/movies:/data/completed'
+            - '${DLDIR}/complete:/data/completed'
             - '${MOVIEDIR}:/movies'
             - '/etc/localtime:/etc/localtime:ro'
 
@@ -283,7 +283,7 @@ services:
             - TZ=${TZ}
         volumes:
             - './sonarr:/config'
-            - '${DLDIR}/complete/tvshows:/data/completed'
+            - '${DLDIR}/complete:/data/completed'
             - '${TVDIR}:/tv'
             - '/etc/localtime:/etc/localtime:ro'
 
