--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -328,3 +328,16 @@ services:
             - './plex/Library/Application Support/Plex Media Server/Logs:/logs:ro'
         depends_on:
             - plex
+            
+    # ----------------------------------------
+    # Plex Meta Manager
+    # ----------------------------------------
+    plex-meta-manager:
+        image: meisnate12/plex-meta-manager
+        container_name: plex-meta-manager
+        restart: unless-stopped
+        network_mode: "bridge"
+        volumes:
+            - './plex-meta-manager:/config:rw'
+        depends_on:
+            - plex
