Added glances and metube, changed muximux to homer Glances is a system monitoring tool. metube is a front end for youtube-dl. Homer is a front page and a replacement for muximux which is deprecated. Portainer has been changed to portainer-ce. Sabnzbd has been configured as a specific version as was having problems with later versions which needs to be investigated.

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ plex
 plex-meta-manager/logs
 plex-meta-manager/config.cache
 plex-meta-manager/*_missing.yml
+plex-meta-manager/*_report.yml
 speedtest
+homer
+glances
+metube
 
 *.env
