--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,42 @@ services:
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
+    # GLANCES
+    # ----------------------------------------
+    glances:
+        image: nicolargo/glances:latest-alpine
+        container_name: glances
+        restart: unless-stopped
+        network_mode: "bridge"
+        pid: host
+        ports:
+            - '${IP_ADDRESS}:61208:61208'
+        environment:
+            - PUID=${PUID}
+            - PGID=${PGID}
+            - TZ=${TZ}
+            - GLANCES_OPT=-w
+        volumes:
+            - './glances:/config'
+            - '/var/run/docker.sock:/var/run/docker.sock:ro'
+
+    # ----------------------------------------
+    # HOMER
+    # ----------------------------------------
+    homer:
+        image: b4bz/homer:latest
+        container_name: homer
+        restart: unless-stopped
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:80:8080'
+        environment:
+            - UID=${PUID}
+            - GID=${PGID}
+        volumes:
+            - './homer:/www/assets'
+
+    # ----------------------------------------
     # JACKETT
     # ----------------------------------------
     jackett:
@@ -110,20 +146,19 @@ services:
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
-    # MUXIMUX
+    # METUBE
     # ----------------------------------------
-    muximux:
-        image: linuxserver/muximux
-        container_name: muximux
+    metube:
+        image: alexta69/metube
+        container_name: metube
         restart: unless-stopped
+        user: "${PUID}:${PGID}"
         network_mode: "bridge"
         ports:
-            - '${IP_ADDRESS}:80:80'
-        environment:
-            - PUID=${PUID}
-            - PGID=${PGID}
+            - '${IP_ADDRESS}:8281:8081'
         volumes:
-            - './muximux:/config'
+            - '${MISCDIR}:/downloads'
+            - './metube:/state'
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
@@ -140,7 +175,7 @@ services:
         cap_add:
             - SYS_PTRACE
         security_opt:
-            - apparmor:unconfined    
+            - apparmor:unconfined
         environment:
             - PGID=${DOCKERGRP}
         volumes:
@@ -152,15 +187,15 @@ services:
     # SABnzbd
     # ----------------------------------------
     arch-sabnzbdvpn:
-        image: binhex/arch-sabnzbdvpn
+        image: binhex/arch-sabnzbdvpn:3.5.3-1-03
         container_name: sabnzbdvpn
         restart: unless-stopped
         network_mode: 'bridge'
         ports:
-          - '${IP_ADDRESS}:8080:8080'
-          - '${IP_ADDRESS}:8090:8090'
+            - '${IP_ADDRESS}:8080:8080'
+            - '${IP_ADDRESS}:8090:8090'
         cap_add:
-          - NET_ADMIN
+            - NET_ADMIN
         environment:
             - VPN_ENABLED=yes
             - VPN_USER=${PIAUNAME}
@@ -170,6 +205,7 @@ services:
             - VPN_PROTOCOL=udp
             - VPN_DEVICE_TYPE=tun
             - VPN_PROV=pia
+            - VPN_CLIENT=openvpn
             - STRONG_CERTS=no
             - ENABLE_PRIVOXY=no
             - STRICT_PORT_FORWARD=yes
@@ -268,7 +304,7 @@ services:
     # PORTAINER
     # ----------------------------------------
     portainer:
-        image: portainer/portainer:latest
+        image: portainer/portainer-ce:latest
         container_name: portainer
         restart: unless-stopped
         network_mode: "bridge"
@@ -281,7 +317,7 @@ services:
             - './portainer:/data'
             - '/var/run/docker.sock:/var/run/docker.sock'
             - '/etc/localtime:/etc/localtime:ro'
-        command: ${PORTAINERSTYLE} -H unix:///var/run/docker.sock
+        command: -H unix:///var/run/docker.sock
 
     # ----------------------------------------
     # RADARR
@@ -359,4 +395,3 @@ services:
             - './plex/Library/Application Support/Plex Media Server/Logs:/logs:ro'
         depends_on:
             - plex
-            
