Fixed up the portainer port number in homer

--- a/prep/config.yml
+++ b/prep/config.yml
@@ -133,7 +133,7 @@ services:
         logo: "assets/icons/portainer.png"
         tag: "monitor"
         tagstyle: "is-danger"
-        url: "https://locip:9443"
+        url: "http://locip:9000"
         target: "_blank"
       - name: "Speedtest"
         logo: "assets/icons/librespeed.png"
