--- a/plex-meta-manager/Movies.yml
+++ b/plex-meta-manager/Movies.yml
@@ -30,7 +30,7 @@ collections:
   Popular:
     template: { name: Chart, num: 2 }
     tmdb_popular: 40
-    imdb_list:
+    imdb_search:
       url: https://www.imdb.com/search/title/?title_type=feature,tv_movie,documentary,short
       limit: 40
     summary: Popular Movies across the internet
@@ -54,14 +54,14 @@ collections:
   
   Top Rated:
     template: { name: Chart, num: 4 }
-    imdb_list: https://www.imdb.com/search/title/?groups=top_250&count=250/
+    imdb_search: https://www.imdb.com/search/title/?groups=top_250&count=250/
     tmdb_top_rated: 250
     summary: Top Rated Movies across the internet
     url_poster: https://i.imgur.com/k4Oy7Xy.png
   
   Oscars:
     template: { name: Chart, num: 5 }
-    imdb_list: https://www.imdb.com/search/title/?title_type=feature,documentary&groups=oscar_winner
+    imdb_search: https://www.imdb.com/search/title/?title_type=feature,documentary&groups=oscar_winner
     summary: Oscar Winning Movies
 
   Car Racing Movies:
@@ -148,6 +148,10 @@ collections:
     template: { name: Best of, year: 2021 }
   Best of 2022:
     template: { name: Best of, year: 2022 }
+  Best of 2023:
+    template: { name: Best of, year: 2023 }
+  Best of 2024:
+    template: { name: Best of, year: 2024 }
 
   Kids Movies:
     trakt_list:
