--- a/plex-meta-manager/Movies_series.yml
+++ b/plex-meta-manager/Movies_series.yml
@@ -21,7 +21,7 @@ collections:
     template: {name: Collection, collection: 809185}
   Batman (DC Universe Animated):
     template: {name: Collection, collection: 421904}
-  Batman: The Dark Knight Returns:
+  Batman The Dark Knight Returns:
     template: {name: Collection, collection: 248534}
   Bridget Jones:
     template: {name: Collection, collection: 8936}
