Added new environment variables for speed-tracker. The new image didn't seem to have a default cron, so needed to add one so that it would continue testing. Couldn't identify the change that modified this default. Worked initially with new image, then stopped. Will see how this goes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -390,6 +390,8 @@ services:
             - PGID=${PGID}
             - PUID=${PUID}
             - APP_KEY=${APP_KEY}
+            - SPEEDTEST_SCHEDULE="0 * * * *"
+            - DISPLAY_TIMEZONE="Australia/Adelaide"
 
         volumes:
             - './speedtest:/config'
