Updated SABnzbd The previous version was old as I had problems updating at some stage. These problems seem to be resolved and now using the latest version.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,7 +204,7 @@ services:
     # SABnzbd
     # ----------------------------------------
     arch-sabnzbdvpn:
-        image: binhex/arch-sabnzbdvpn:3.5.3-1-03
+        image: binhex/arch-sabnzbdvpn:latest
         container_name: sabnzbdvpn
         restart: unless-stopped
         network_mode: 'bridge'
