Fixed problem which was causing Sabnzbd and Deluge containers to not start Fix was taken from https://forum.openmediavault.org/index.php?thread/54812-after-server-restart-openvpn-containers-would-not-start-with-error-cannot-open-t/&pageNo=1 Seemed to be related to something new in latest OS updates and adding the device to docker-compose resolved it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
             - '${IP_ADDRESS}:58946:58946'
         cap_add:
             - NET_ADMIN
+        devices:
+            - /dev/net/tun:/dev/net/tun
         environment:
             - VPN_ENABLED=yes
             - VPN_USER=${PIAUNAME}
@@ -213,6 +215,8 @@ services:
             - '${IP_ADDRESS}:8090:8090'
         cap_add:
             - NET_ADMIN
+        devices:
+            - /dev/net/tun:/dev/net/tun
         environment:
             - VPN_ENABLED=yes
             - VPN_USER=${PIAUNAME}
