--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
     # HOMEPAGE
     # ----------------------------------------
     homepage:
-        image: ghcr.io/benphelps/homepage:latest
+        image: ghcr.io/gethomepage/homepage:latest
         container_name: homepage
         restart: unless-stopped
         network_mode: "bridge"
