Set environment variable for Homepage
V1.0 has been released, which requires setting allowed hosts as an
additional security measure in order to access

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,6 +102,7 @@ services:
             - PUID=${PUID}
             - PGID=${PGID}
             - TZ=${TZ}
+            - HOMEPAGE_ALLOWED_HOSTS=${IP_ADDRESS}
         volumes:
             - './homepage:/app/config'
 
